# GradrBackend

./: .gitignore  Cargo.toml  LICENSE  README.md
gradr-backend/: Cargo.toml
gradr-backend/src/: builder.rs  main.rs
gradr-core/: Cargo.toml
gradr-ui/: Gemfile
gradr-ui/app/controllers/: application_controller.rb  session_controller.rb  users_controller.rb
gradr-ui/app/models/: course.rb  membership.rb  user.rb
gradr-ui/config/: application.rb  routes.rb  secrets.yml
gradr-ui/config/initializers/: session_store.rb
gradr-ui/db/: schema.rb
gradr-ui/db/migrate/: 20141017233457_create_users.rb  20141017233509_create_courses.rb  20141018001420_create_memberships.rb
gradr_backend/: Cargo.toml
gradr_backend/src/: builder.rs  database.rs  lib.rs  main.rs  notification_listener.rs  worker.rs
gradr_backend/test/compile_error/: main.c
gradr_backend/test/testing_parsing_nonempty_success/: main.c
gradr_backend/tests/: builder.rs  lib.rs
gradr_notifications/: Cargo.toml
gradr_notifications/src/: main.rs
gradr_queue_depth/: Cargo.toml
gradr_queue_depth/src/: main.rs
gradr_worker/: Cargo.toml
gradr_worker/build_test/: README.md
gradr_worker/src/: main.rs
libgradr/: .gitignore  Cargo.toml
libgradr/src/: builder.rs  clone_url.rs  database.rs  lib.rs  notification_listener.rs  util.rs  worker.rs
libgradr/test/: makefile
libgradr/tests/: lib.rs  test.rs
raw_data/: process_queue_data.pl
raw_data/sleep0.5/: time to complete each.numbers
raw_data/sleep3/: time to complete all.numbers  time to complete each.tiff
report/: .gitignore  bibtex.bib  makefile  report.tex
report/non_graph_images/: system overview.key  system overview.tiff
report/raw_data/: process_queue_data.pl
scripts/: repeated_post.sh
src/: builder.rs  database.rs  lib.rs  main.rs  notification_listener.rs  util.rs  worker.rs
tests/: lib.rs
(+59 files in other folders)
