[package]

name = "gradr_backend"
version = "0.0.1"
authors = ["Kyle Dewey <kyledewey@cs.ucsb.edu>"]


[dependencies.sqlite3]
git = "https://github.com/linuxfood/rustsqlite"

[dependencies.postgres]
git = "https://github.com/sfackler/rust-postgres.git"

[dependencies.rust_github]
git = "https://github.com/kyledewey/rust-github.git"
branch = "push_notification"

[dependencies.url]
name = "url"
git = "https://github.com/servo/rust-url"

