[package]

name = "libgradr"
version = "0.0.1"
authors = ["Kyle Dewey <kyledewey@cs.ucsb.edu>"]

[lib]

name = "libgradr"
path = "src/lib.rs"


[dependencies.postgres]
git = "https://github.com/sfackler/rust-postgres.git"

[dependencies.rust_github]
git = "https://github.com/jroesch/rust-github.git"

[dependencies.url]
name = "url"
git = "https://github.com/servo/rust-url"

[dependencies.pg_typeprovider]
name = "pg-typeprovider"
git  = "https://github.com/jroesch/pg-typeprovider"
